luci-theme-bootstrap: fix tabs rendering
If we have a lot of tabs that do not fit in width, we must wrap
tabs to next line.

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
@@ -1020,6 +1020,7 @@ header .dropdown-menu a.hover,
 	padding: 0 2px;
 	list-style: none;
 	display: flex;
+	flex-wrap: wrap;
 	background: linear-gradient(#ddd 0%, #ddd 100%) repeat-x;
 	background-size: 1px 1px;
 	background-position: left bottom;
